src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__backspace_after_pastes.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                         /\/\/\/\\  "
"                                                                                           Echo     "
"                                                                                                    "
"› [Pasted Content 1002 chars][Pasted Content 1004 chars]                                            "
"                                                                                                    "
"  loading · 100% left                                                                               "
