src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__footer_collapse_code_queue_full.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                               .----.   "
"                                                                                                              ( @  @ )  "
"                                                                                                              (______)  "
"                                                                                                             /\/\/\/\\  "
"                                                                                                                Echo    "
"› Test                                                                                                                  "
"                                                                                                                        "
"  gpt-5.4 high · 98% left · ~/Workspace/adam                                 Identity programmer (shift+tab to change)  "
