src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› Ask Adam to do anything                   "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  gpt-5.4 high            Identity planner  "
